# autonomous-car

./: .gitignore  README.MD
car_controls/: .gitignore  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  README.md  STM32F303x8.cmake  build.sh  cmake_install.cmake  config.py  deploy.sh  main.cpp  main.cpp.back  mbed.bld  moveFile.bat  please_blink_boi.ioc  requirements.txt  servo.bld
car_controls/Src/: main.c
car_controls/src/: CarState.cpp  CarState.hpp  Main.cpp  Main.hpp  NetworkManager.cpp  NetworkManager.hpp  RevCounter.cpp  RevCounter.hpp  SerialInputProtocol.cpp  SerialInputProtocol.hpp  main.cpp
car_controls/src/controller/: Controller.cpp  Controller.hpp  RevCounter.cpp  RevCounter.hpp
car_controls/src/debug/: LEDHandler.cpp  LEDHandler.hpp
car_controls/src/misc/: CarState.cpp  CarState.hpp  EmergencyBreak.cpp  EmergencyBreak.hpp  RingBuffer.hpp  directions.hpp  sequences.cpp  sequences.hpp
car_controls/src/network/: NetworkManager.cpp  NetworkManager.hpp  SerialInputProtocol.cpp  SerialInputProtocol.hpp
main_unit/: README.MD  config.py
main_unit/ai_robo_car/: pixy.py  setup.py
main_unit/ai_robo_car/ai_robo_car/: abstract_layer.py  get_blocks.py  layer_management.py  layer_manager.py  packet.py
main_unit/ai_robo_car/ai_robo_car/layer/: __init__.py  data_objects.py  engine_communicator.py  mock_engine_communicator.py  mock_path_finder.py  movement_calculator.py  object_recognizer.py  path_finder.py  path_translator.py  relative_translator.py  test_layer.py
main_unit/ai_robo_car/tests/: data_objects_test.py  engine_communicator_test.py  layer_structure_test.py  object_recognizer_test.py  path_finder_test.py  path_translator_test.py  relative_translator_test.py
main_unit/dependencies/libpixyusb/: PKGBUILD
main_unit/src/: main.py  packet.py  send.py  uart.py
main_unit/systemd-units/: wifi_ap.service
protobuf/: pi2nucleo.proto  pi2nucleo_pb2.py
